# sol_beast

./: .env.example  .gitignore  ARCHITECTURE.md  BOT_FUNCTIONALITY_TESTING.md  CENTRALIZATION_PROGRESS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_DOCUMENTATION_INDEX.md  CI_SETUP_SUMMARY.md  CORS_PROXY_SOLUTION.md  Cargo.toml  Cargo.toml.backup  DEBUG_SESSION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_TEST_RESULTS.md  DEV_FEE_GUIDE.md  DEV_TIP_IMPLEMENTATION.md  DUAL_MODE_GUIDE.md  Dockerfile  FEATURES.md  FIX_SUMMARY.md  GITHUB_PAGES_SETUP.md  GITHUB_SECRETS_SETUP.md  HOT_RELOAD_SETTINGS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SETTINGS_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DETECTION.md  LICENSING.md  MAINTAINER_RESOLUTION_GUIDE.md  MEMECOIN_DETECTION_OPTIMIZATION.md  MEMORY_ACCESS_FIX.md  MEMORY_SAFETY_FIX.md  MERGE_CONFLICT_RESOLUTION.md  MIGRATION.md  NEXT_STEPS.md  PHASE_1_SUMMARY.md  PHASE_2.5_SUMMARY.md  (+62 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: README.md  build-docs.yml  ci.yml  deploy-docs.yml  deploy-gh-pages.yml  deploy.yml  gh-pages.yml  test-deployment.yml  test-gh-pages.yml  validate-setup.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/blockchain/: rpc.rs  rpc_client.rs  rpc_helpers.rs  signer.rs  transaction.rs  tx_builder.rs
core/src/config/: settings.rs  wallet.rs
core/src/connectivity/: api.rs  ws.rs
core/src/core/: error.rs  models.rs  state.rs
core/src/core_mod/: error.rs  models.rs  state.rs
core/src/helius/: client.rs  mod.rs
core/src/protocols/: idl.rs  pumpfun.rs
core/src/trading/: buyer.rs  monitor.rs  strategy.rs
docs/: ARCHITECTURE.md  CLI_DESIGN_SPECIFICATION.md  CLI_IMPLEMENTATION_EXAMPLES.md  CLI_IMPLEMENTATION_GUIDE.md  CLI_IMPLEMENTATION_REVIEW.md  CNAME  FLYONUI_INTEGRATION_STRATEGY.md  GITHUB_PAGES_SETUP.md  MIGRATION.md  QUICK_START.md  README.md  TECHNICAL_SPECIFICATION.md  buffer-polyfill.js  buffer-standalone-bundle.js  buffer-standalone-bundle.js.LICENSE.txt  buffer-standalone.js  index.html  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/advanced/: performance.md  risk-management.md  strategies.md
docs/api/: endpoints.md  websocket.md
docs/assets/: 443-62cd2abc1767c2f00c64.js  779-3fd80d11b06539b8bb27.js  779-7c8701689974084d1b16.js  779-adf3d64f0c25e69803a1.js  779-ca71ae08d58750645aa6.js  779-e996cc1c1b62cd51fb06.js  main-00dcc88f7b594d18dea2.js  main-16eb0baae89559e8cfc1.js  main-2b9e754ef20faf5c94cc.js  main-7ce415f013cb5791bdb8.js  main-83fab850cd5826c8bea2.js  main-969b23c6e41c66bb078c.js  solana-web3-b378b640bc1e705af51f.js  vendors-b5aafc0ae2ae320a1587.js  vendors-b5aafc0ae2ae320a1587.js.LICENSE.txt  wallet-adapter-93bbe3d6b79cf3eb3779.js
docs/guide/: architecture.md  configuration.md  contributing.md  dashboard.md  faq.md  getting-started.md  helius-sender.md  installation.md  introduction.md  themes.md  trading-parameters.md  troubleshooting.md
docs/public/: CNAME
frontend/: .env.example  .gitignore  Dockerfile  README.md  deploy-local-gh-pages.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-bot-functionality.mjs  test-with-playwright.mjs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  tsconfig.webpack.json  vite.config.js  vite.config.ts  webpack.config.cjs
frontend/public/: bot-settings.json  buffer-polyfill.js  buffer-standalone-bundle.js  tunnel-bypass.html
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  polyfills.ts  shims-buffer.ts  vite-env.d.ts  wasm.d.ts
idl/: README.md  pumpfun.json  pumpfunamm.json  pumpfunfees.json
program/: Cargo.toml  README.md  build.sh
program/src/: lib.rs
scripts/: generate-brand-assets.mjs  generate_license.sh  ngrok-tunnel.sh  tunnel-auto.sh  tunnel-help.sh  tunnel-proxy.js  tunnel.sh  verify_config.sh
scripts/linux/: copy-frontend.sh  deploy.sh  start-all.sh  start-backend.sh
scripts/macos/: deploy.sh  start-frontend.sh
scripts/windows/: deploy.bat  start-frontend-wasm.bat
sol_beast_cli/: Cargo.toml
sol_beast_cli/src/: buy_wrapper.rs  buyer.rs  dev_fee.rs  error.rs  main.rs  main.rs.backup  models.rs  monitor.rs  price_subscriber.rs  pumpportal_ws.rs  rpc.rs  settings.rs  shyft_monitor.rs  state.rs  trade_logger.rs  ws.rs
sol_beast_cli_src_backup/: api.rs  error.rs  helius_sender.rs  monitor.rs  settings.rs  state.rs
sol_beast_core/: Cargo.toml
sol_beast_core/src/: buy_service.rs  buyer.rs  dev_fee.rs  error.rs  idl.rs  lib.rs  metadata.rs  models.rs  pipeline.rs  price_subscriber.rs  rpc_client.rs  sell_service.rs  settings.rs  storage_trait.rs  strategy.rs  transaction.rs  transaction_service.rs  transaction_signer.rs  tx_parser.rs  wallet.rs
sol_beast_core/src/detection/: detector.rs  filters.rs  metrics.rs  mod.rs
sol_beast_core/src/native/: http.rs  mod.rs  price_subscriber.rs  rpc_impl.rs  storage_impl.rs  transaction_signer.rs
sol_beast_core/src/shyft/: api.rs  mod.rs  types.rs
sol_beast_core/src/wasm/: http.rs  mod.rs  price_subscriber.rs  rpc.rs  storage.rs  storage_impl.rs  transaction_signer.rs  utils.rs  websocket.rs
sol_beast_docs/: README.md  SETUP.md  book.toml
sol_beast_docs/src/: SUMMARY.md  introduction.md
sol_beast_docs/theme/: custom.css  custom.js
sol_beast_frontend/: .gitignore  README.md  setup.sh  vite.config.js  vite.config.ts
sol_beast_frontend/src/: App.tsx  config.ts  main.tsx
sol_beast_protocols/: README.md
sol_beast_scripts/: README.md
sol_beast_scripts/linux/: quick-start.sh  start-all.sh  (+6 more)
sol_beast_wasm/: Cargo.toml  wasm-pack-build.sh
sol_beast_wasm/src/: lib.rs  monitor.rs
src/: api.rs  buyer.rs  dev_fee.rs  error.rs  helius_sender.rs  idl.rs  license.rs  main.rs  models.rs  monitor.rs  onchain_idl.rs  pumpportal.rs  rpc.rs  settings.rs  tx_builder.rs  ws.rs
tests/: price_formula.rs
tools/: README.md  backend.sh  frontend.sh  pumpportal_listen.py
wasm/: Cargo.toml  test.js  wasm-pack-build.sh
wasm/src/: lib.rs
(+64 files in other folders)
