[package]
name = "sol_beast"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12" }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
solana-program = "2.1.1"
solana-client = "2.1.1"
solana-sdk = "2.1.1"
solana-account-decoder = "2.1.1"
base64 = "0.22"
bs58 = "0.5"
url = "2.5.0"
borsh = { version = "1.5", features = ["derive"] }
lru = "0.12"
chrono = "0.4"
config = "0.14"
toml = "0.8"
mpl-token-metadata = "5.1.1"
rand = "0.8"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
once_cell = "1.18"
bincode = "1.3"
