[workspace]
members = [
    "sol_beast_core",
    "sol_beast_cli",
    "sol_beast_wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sol_beast contributors"]
license = "MIT"
repository = "https://github.com/MSB0095/sol_beast"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bs58 = "0.5"
borsh = { version = "1.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
log = "0.4"
url = "2.5.0"
rand = "0.8"
once_cell = "1.18"

# Solana dependencies (compatible versions)
solana-program = "2.1.1"
solana-sdk = "2.1.1"
solana-client = "2.1.1"
solana-account-decoder = "2.1.1"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "5.1.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12" }

# WASM-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Additional dependencies
async-trait = "0.1"
console_log = "1.0"
env_logger = "0.11"
