[workspace]
members = [
    "sol_beast_core",
    "sol_beast_wasm", 
    "sol_beast_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sol Beast Contributors"]

[workspace.dependencies]
# Core dependencies (platform-agnostic)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
once_cell = "1.18"
futures-util = "0.3"

# Solana dependencies  
solana-program = "2.1.1"
solana-sdk = "2.1.1"
solana-pubkey = "2.1.1"
solana-account-decoder = "2.1.1"
solana-transaction-status = "2.1.1"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "5.1.1"
base64 = "0.22"
bs58 = "0.5"
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"
url = "2.5.0"
lru = "0.12"
toml = "0.8"

# Native-only dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12" }
config = "0.14"
env_logger = "0.11"
solana-client = "2.1.1"

# Web API dependencies
axum = { version = "0.7" }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# WASM dependencies
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
web-sys = { version = "0.3" }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package.sol_beast_wasm]
opt-level = "z" # Optimize for size in WASM build
codegen-units = 1
