[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sol_beast"
path = "src/main.rs"

[dependencies]
core_lib = { package = "core", path = "../core", features = ["native", "native-rpc"] }

# CLI Framework - Minimal dependencies
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.0"
human-panic = "2.0"
env_logger = "0.11"

# Async Runtime
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
solana-sdk = { version = "2.3", default-features = false }

[features]
default = []
