[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sol_beast"
path = "src/main.rs"

[dependencies]
core_lib = { package = "sol_beast_core", path = "../core", features = ["native", "native-rpc"] }

# CLI Framework - Minimal dependencies
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
colored = "2.0"
human-panic = "2.0"
env_logger = "0.11"
log = "0.4"

# Async Runtime
tokio = { workspace = true }
once_cell = "1.18"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
reqwest = { workspace = true }
solana-sdk = { version = "2.3", default-features = false }
chrono = { workspace = true }

[features]
default = []

[dev-dependencies]
async-trait = "0.1"
tempfile = "3.4"
base64 = "0.22"
libc = { version = "0.2", optional = false }
