[package]
name = "sol_beast_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sol_beast"
path = "src/main.rs"

[dependencies]
sol_beast_core = { path = "../sol_beast_core", features = ["native"] }

tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
solana-program = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
url = { workspace = true }
borsh = { workspace = true }
lru = "0.12"
chrono = { workspace = true }
config = "0.14"
toml = "0.8"
mpl-token-metadata = { workspace = true }
rand = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
once_cell = { workspace = true }
bincode = "1.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = { workspace = true }
