[package]
name = "sol_beast_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sol_beast"
path = "src/main.rs"

[dependencies]
sol_beast_core = { path = "../sol_beast_core", default-features = false, features = ["native"] }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
lru = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Solana
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
