[package]
name = "sol_beast_core"
version.workspace = true
edition.workspace = true

[lib]
name = "sol_beast_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }

# Additional dependencies for core functionality
async-trait = "0.1"

# Solana dependencies
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
lru = { workspace = true }
toml = { workspace = true }

# Conditional native dependencies
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
config = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

# Conditional WASM dependencies
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Window",
    "Document",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "console",
] }
getrandom = { workspace = true, optional = true, features = ["js"] }

# Explicitly add getrandom 0.3 with wasm_js feature for ahash and other deps
[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]
optional = true

[features]
default = []
native = [
    "tokio",
    "reqwest", 
    "config",
    "solana-client",
    "tokio-tungstenite",
]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "getrandom",
    "getrandom_v03",
    "serde-wasm-bindgen",
]
