[package]
name = "sol_beast_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sol_beast_core = { path = "../sol_beast_core", features = ["wasm"] }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Storage",
    "Crypto",
    "SubtleCrypto",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "console",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
log = { workspace = true }
console_log = "1.0"
console_error_panic_hook = "0.1"
getrandom = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = "abort"     # Reduce binary size
strip = true        # Strip symbols
