[package]
name = "sol_beast_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wee_alloc = ["dep:wee_alloc"]

[dependencies]
sol_beast_core = { path = "../sol_beast_core", default-features = false, features = ["wasm"] }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
solana-pubkey = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "console",
] }
getrandom = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-logger = { workspace = true }
base64 = { workspace = true }

# Additional WASM-specific dependencies
serde-wasm-bindgen = "0.6"
wee_alloc = { version = "0.4", optional = true }

# Explicitly add getrandom 0.3 with wasm_js feature for ahash and other deps
[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-nontrapping-float-to-int"]
