[package]
name = "wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sol_beast_core = { package = "sol_beast_core", path = "../core", default-features = false, features = ["wasm"] }
# helius: will be migrated into core as core::helius

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Storage",
    "Crypto",
    "SubtleCrypto",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Blob",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
log = { workspace = true }
console_log = "1.0"
console_error_panic_hook = "0.1"
chrono = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-sdk = { workspace = true }
bincode = "1.3"
base64 = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
panic = "abort"     # Reduce binary size
strip = "debuginfo" # Strip debug info only, preserve some debuggability
